Add GitHub Pages deployment

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@ VITE_YOUTUBE_API_KEY=your_api_key_here
 # Your YouTube Channel ID
 VITE_YOUTUBE_CHANNEL_ID=your_channel_id_here
 
-# Google OAuth 2.0 credentials (for Analytics API)
+# Google OAuth 2.0 Client ID (for Analytics API)
+# Note: Client ID is public and safe to expose in frontend
 VITE_GOOGLE_CLIENT_ID=your_client_id_here
-VITE_GOOGLE_CLIENT_SECRET=your_client_secret_here
 
 # OAuth redirect URI (must match Google Cloud Console settings)
+# Development: http://localhost:5173/callback
+# Production: https://weiyun0912.github.io/naked-login-dashboard/callback
 VITE_OAUTH_REDIRECT_URI=http://localhost:5173/callback
